# ZHH

./: .gitignore  Dockerfile  README.md  compile_from_scratch.sh  ddsim.out  dumplcio.py  install  install.sh  marlin_file.xml  marlin_file_v2.xml  my_steer.py  my_steer.py.save  per_job.sh  plots.py  pyproject.toml  read_slcio.C  requirements.txt  runzhhanalysis.sh  setup-dev.sh  setup.sh  setup_env.sh  test-upload_files.py  test.ipynb  view.ipynb  view_v2.ipynb  view_v3.ipynb
source/: CMakeLists.txt
source/AddNeutralPFOCovMat/src/: AddNeutralPFOCovMat.cc
source/ChargedPFOCorrection/src/: ChargedPFOCorrection.cc
source/CheatedMCOverlayRemoval/: CMakeLists.txt
source/CheatedMCOverlayRemoval/include/: CheatedMCOverlayRemoval.h
source/CheatedMCOverlayRemoval/src/: CheatedMCOverlayRemoval.cc
source/CommonTools/include/: EventCategory.h  inv_mass.h  sync_pids.h  v4.h
source/EventObservables/: CMakeLists.txt
source/EventObservables/include/: EventObservablesBase.h  EventObservablesFromZZ.h  EventObservablesLL.h  EventObservablesQQ.h  EventObservablesVV.h
source/EventObservables/src/: EventObservablesBase.cc  EventObservablesFromZZ.cc  EventObservablesLL.cc  EventObservablesQQ.cc  EventObservablesVV.cc
source/ExpandJetProcessor/: CMakeLists.txt  README.md
source/ExpandJetProcessor/include/: ExpandJetProcessor.h
source/ExpandJetProcessor/src/: ExpandJetProcessor.cc
source/FinalSelection/include/: FinalSelection.h
source/FinalSelection/src/: FinalSelection.cc
source/FinalStateRecorder/: CMakeLists.txt
source/FinalStateRecorder/include/: FinalStateRecorder.h  FinalStateResolver.h  FinalStates.h  FinalStates_2f.h  FinalStates_2p.h  FinalStates_4f.h  FinalStates_4p.h  FinalStates_5f.h  FinalStates_5p.h  FinalStates_6f.h  FinalStates_6p.h  FinalStates_ff.h  FinalStates_ffffh.h  FinalStates_ffhh.h  FinalStates_h2f.h  FinalStates_h4f.h  FinalStates_hh2f.h  FinalStates_tth_ttz.h  common.h
source/FinalStateRecorder/src/: FinalStateRecorder.cc  FinalStateResolver.cc  FinalStates.cc
source/HdecayMode/: CMakeLists.txt
source/HdecayMode/include/: HdecayMode.h
source/HdecayMode/src/: HdecayMode.cc
source/JetErrorAnalysis/include/: JetErrorAnalysis.h
source/JetErrorAnalysis/src/: JetErrorAnalysis.cc
source/JetTaggingComparison/: CMakeLists.txt  README.md
source/JetTaggingComparison/include/: JetTaggingComparison.h
source/JetTaggingComparison/src/: JetTaggingComparison.cc
source/LeptonErrorAnalysis/: CMakeLists.txt
source/LeptonErrorAnalysis/include/: LeptonErrorAnalysis.h
source/LeptonErrorAnalysis/src/: LeptonErrorAnalysis.cc
source/LeptonPairing/: CMakeLists.txt
source/LeptonPairing/include/: LeptonPairing.h  LeptonPairingCombined.h  Utilities.h  ZHHUtilities.h
source/LeptonPairing/src/: LeptonPairing.cc  LeptonPairingCombined.cc  Utilities.cc  ZHHUtilities.cc
source/MergeCollections/include/: MergeCollections.h
source/MergeCollections/src/: MergeCollections.cc
source/MergePIDProcessor/: CMakeLists.txt
source/MergePIDProcessor/include/: MergePIDProcessor.h
source/MergePIDProcessor/src/: MergePIDProcessor.cc
source/Misclustering/: CMakeLists.txt
source/Misclustering/include/: Misclustering.h
source/Misclustering/src/: Misclustering.cc
source/PFOSelection/: CMakeLists.txt
source/PFOSelection/include/: PFOSelection.h
source/PFOSelection/src/: PFOSelection.cc
source/PreSelection/: CMakeLists.txt  cuts.json
source/PreSelection/include/: PreSelection.h
source/PreSelection/src/: PreSelection.cc
source/SwitchCovMat/: CMakeLists.txt
source/SwitchCovMat/include/: SwitchCovMat.h
source/SwitchCovMat/src/: SwitchCovMat.cc
source/TruthKinematicsRecorder/: CMakeLists.txt
source/TruthKinematicsRecorder/include/: TruthKinematicsRecorder.h
source/TruthRecoComparison/: CMakeLists.txt
source/TruthRecoComparison/include/: TruthRecoComparison.h
source/TruthRecoComparison/src/: TruthRecoComparison.cc
source/ZHHKinfitProcessors/: CMakeLists.txt
source/ZHHKinfitProcessors/include/: NeutrinoFitObjectNew.h  ZHHBaseKinfitProcessor.h  ZHHKinFit.h  ZHHllbbbbKinFit.h  ZHHllbbbbKinFitv1.h  ZHHqqbbbbKinFit.h  ZHHqqbbbbKinFitv1.h  ZHHvvbbbbKinFit.h  ZHHvvbbbbKinFitv1.h  ZinvisibleFitObjectNew.h  ttbarKinFit.h
source/ZHHKinfitProcessors/src/: NeutrinoFitObjectNew.cc  ZHHBaseKinfitProcessor.cc  ZHHKinFit.cc  ZHHKinFit_fixedjjperms.cc  ZHHKinFit_oldjjperms.cc  ZHHKinFit_sumbperms.cc  ZHHKinFitfalse45.cc  ZHHllbbbbKinFit.cc  ZHHllbbbbKinFitv1.cc  ZHHqqbbbbKinFit.cc  ZHHqqbbbbKinFitv1.cc  ZHHvvbbbbKinFit.cc  ZHHvvbbbbKinFitv1.cc  ZinvisibleFitObjectNew.cc  ttbarKinFit.cc
source/ZHHPostRecoMEProcessor/include/: ZHHPostRecoMEProcessor.h
source/ZHHPostRecoMEProcessor/src/: ZHHPostRecoMEProcessor.cc
source/ZinvisibleErrorAnalysis/: CMakeLists.txt
source/ZinvisibleErrorAnalysis/include/: ZinvisibleErrorAnalysis.h
source/ZinvisibleErrorAnalysis/src/: ZinvisibleErrorAnalysis.cc
source/bHadronAnalysis/: CMakeLists.txt
source/bHadronAnalysis/include/: bHadronAnalysis.h
source/bHadronAnalysis/src/: bHadronAnalysis.cc
source/lcio_get_physics_meta/: CMakeLists.txt
source/lcio_get_physics_meta/src/: lcio_get_physics_meta.cc
source/legacy/: CMakeLists.txt
source/legacy/include/: RootFileProcessor.h  Utilities.h  ZHHll4JAnalysisProcessor.h  ZHHll4JLeptonSelectionMVAProcessor.h  ZHHll4JLeptonSelectionProcessor.h
source/legacy/include/.svn/: all-wcprops  (+1 more)
source/legacy/run/: template_cheated_overlay_removal_lcfiplus.xml  template_fastjet.xml  template_lep_mva.xml
source/legacy/src/: RootFileProcessor.cc  Utilities.cc  ZHHll4JAnalysisProcessor.cc  ZHHll4JLeptonSelectionMVAProcessor.cc  ZHHll4JLeptonSelectionProcessor.cc  ZHHll4JLeptonSelectionProcessor.cc.bk  ZHHll4JLeptonSelectionProcessor.cc.gen  ZHHll4JLeptonSelectionProcessor.cc.lepOpt
source/legacy/weights_isolated_electron/: TMVAClassification_MLP.class.C
source/legacy/weights_isolated_muon/: TMVAClassification_Fisher.class.C  TMVAClassification_MLP.weights.xml
zhh/mem/Physsim/: CMakeLists.txt  PhyssimMatrixElementProvider.py  PhyssimWrapper.cpp  compile.sh
(+370 files in other folders)
